# goladder

./: Cargo.toml  LICENSE  README.md
database/: schema.sql  testdata.sql
gorating/: Cargo.toml
gorating/src/: lib.rs
src/: data_exchange.rs  db.rs  main.rs  models.rs  presence.rs  standings.rs  update_ratings.rs
static/css/: default.css
templates/: add_round.html  base.html  edit_player.html  error.html  import.html  index.html  players.html  presence.html  schedule_round.html  standings.html
weightedmatch/: Cargo.toml
weightedmatch/src/: lib.rs
weightedmatch/tests/: big.rs
