[package]
name = "goladder"
version = "0.2.0"
authors = ["Jilles Tjoelker <jilles@stack.nl>"]
edition = "2018"

[dependencies]
actix-web = "0.7.18"
r2d2 = "0.8"
r2d2_sqlite = "0.9.0"
rusqlite = "0.17.0"
time = "0.1.42"
weightedmatch = { path = "weightedmatch" }
gorating = { path = "gorating" }

[dependencies.askama]
version = "0.8"
features = ["with-actix-web"]

[dependencies.rust-embed]
version = "4.3.0"
features = ["actix"]

[workspace]
