[package]
name = "goladder"
version = "0.5.1"
authors = ["Jilles Tjoelker <jilles@stack.nl>"]
edition = "2018"

[dependencies]
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
actix-web = { version = "4.1", default-features = false }
actix-multipart = "0.4"
askama_actix = "0.13"
r2d2 = "0.8"
r2d2_sqlite = "0.21.0"
rusqlite = { version = "0.28.0", features = ["winsqlite3"] }
time = "0.1.42"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
weightedmatch = { path = "weightedmatch" }
gorating = { path = "gorating" }

[dependencies.askama]
version = "0.11.1"
features = ["with-actix-web"]

[dependencies.rust-embed]
version = "6.3.0"

[workspace]
